change to webpack...

--- a/index.html
+++ b/index.html
@@ -113,7 +113,9 @@
 <!-- <script src = "./pokersolver-master/pokersolver.js">
 
 </script> -->
-<script>
+<!-- <script>
+
+    const state = {};
     
    
     // const fetchAsyncA = async () => await (await fetch('https://api.github.com')).json()
@@ -282,5 +284,5 @@
 
     getDeckOfCards();
     
-</script>
+</script> -->
 </html>
