--- a/index.html
+++ b/index.html
@@ -40,15 +40,17 @@
         display: none;
     }
 
+    .winner{
+        font-size: 2em;
+
+    }
+
     .turn {
         display: inline-block;
         margin-top: 2em;
         margin-left: 1em;
     }
 
-    .turn__button{
-
-    }
 
     .showdown{
         display: inline-block;
@@ -88,6 +90,7 @@
             <button class = "players-card__card players-card__card--15"></button>
             <h1>Player One</h1>
             <p>You can only discard and draw up to three cards</p>
+            <h1 class = "winner">Player One has won</h1>
         </div>
         <br/>
         <div class="players-card__player-2">
